# tzif-codec.rs

./: .gitignore  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clippy.toml  release-plz.toml
.github/workflows/: release.yml
src/: builder.rs  common.rs  error.rs  footer.rs  interop.rs  leap.rs  lib.rs  model.rs  parse.rs  tzdist.rs  validate.rs  write.rs
tests/: builder.rs  interoperability_warnings.rs  rfc9636_appendix_b.rs  security_considerations.rs  tzdist.rs
tests/builder/: explicit_transitions.rs  fixed_offset.rs  posix_footer.rs
tests/common/: mod.rs
tests/security_considerations/: footer.rs  layout.rs  leap_seconds.rs  parser.rs  support.rs  validation.rs
