[package]
name = "tzif-codec"
version = "0.1.3"
edition = "2021"
rust-version = "1.85"
authors = ["The tzif-codec authors"]
license = "MIT"
description = "Codec, validator, and builder for RFC 9636 TZif files"
readme = "README.md"
repository = "https://github.com/craftguild/tzif-codec.rs"

[lints.rust]
unsafe_code = "deny"
warnings = "deny"

[lints.clippy]
expect_used = "deny"
indexing_slicing = "deny"
panic = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"

[dependencies]
thiserror = "2"

[dev-dependencies]
jiff = "0.2.23"
